--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
             </div>
             <div class="footer-two">
                 <div class="footer-one-icons">
-                    <span><img src="../images/icon-facebook.svg" alt=""></span>
-                    <span><img src="../images/icon-instagram.svg" alt=""></span>
-                    <span><img src="../images/icon-pinterest.svg" alt=""></span>
-                    <span><img src="../images/icon-twitter.svg" alt=""></span>
+                    <span><img src="../First-Task-React-Training-/images/icon-facebook.svg" alt=""></span>
+                    <span><img src="../First-Task-React-Training-/images/icon-instagram.svg" alt=""></span>
+                    <span><img src="../First-Task-React-Training-/images/icon-pinterest.svg" alt=""></span>
+                    <span><img src="../First-Task-React-Training-/images/icon-twitter.svg" alt=""></span>
                 </div>
                 <div class="copy">
                    <span>&copy 2024 Loopatudioa. All rights reserves.</span>
